# Weather-Chatbot-phi3

./: .env  .gitignore  Dockerfile  README.md  app (another copy).py  app (copy).py  app.py  functions.py  git_put_py_publish.sh  pyproject.toml  pyproject.tomlh  requirements.txt  update_pyproject.py
.devcontainer/: devcontainer.json
certificates/: selfsigned.crt  selfsigned.key
notebooks/.ipynb_checkpoints/: 1_Data-Generation-OpenWeather-API-checkpoint.ipynb
notebooks/data/: response_dataset.json
remake_notebooks/: 1_3.ipynb  1_Data-Generation-OpenWeather-API-Copy1.ipynb  1_Data-Generation-OpenWeather-API.ipynb  2_Hugging face .ipynb  2_Model-Train-Phi3-Mini-4k-iunsloth.ipynb  2_Model_Train_Phi3_Mini_4k_iunsloth_Copy.ipynb  3_Inference_Pipeline_Setup.ipynb  4_Inference_with_llama_cpp.ipynb  Untitled.ipynb  intent_dataset.json  untitled.txt  weather-lang-chain-phi-3.ipynb
remake_notebooks/.ipynb_checkpoints/: 1_Data-Generation-OpenWeather-API-Copy1-checkpoint.ipynb  1_Lang-Chain-Weather-Data-LLM-checkpoint.ipynb  2_Hugging face -checkpoint.ipynb  2_Model-Train-Phi3-Mini-4k-iunsloth-checkpoint.ipynb  2_Model_Train_Phi3_Mini_4k_iunsloth_Copy-checkpoint.ipynb  3_Inference_Pipeline_Setup-checkpoint.ipynb  4_Inference_with_llama_cpp-checkpoint.ipynb  5_ZeroShot_inference-checkpoint.ipynb  functions-checkpoint.py
remake_notebooks/.virtual_documents/: 1_Data-Generation-OpenWeather-API-Copy1.ipynb  1_Data-Generation-OpenWeather-API.ipynb  1_Lang-Chain-Weather-Data-LLM.ipynb  2_Hugging face .ipynb  3 Context Forecast.ipynb  (+11 more)
weather_chatbot/: app.py  functions.py
(+33 files in other folders)
